--- a/io-gen/examples/test-basic.yaml
+++ b/io-gen/examples/test-basic.yaml
@@ -18,7 +18,7 @@ signals:
     bank: 34
     direction: in
     buffer: ibufds
-    pins:
+    pinset:
       p: D1
       n: E1
 
@@ -26,10 +26,10 @@ signals:
     bank: 34
     direction: out
     buffer: obufds
-    pins:
+    pinset:
       p: [A10, A11, A12]
       n: [B10, B11, B12]
-    width: 3
+      width: 3
 
 banks:
   - bank: 34
