Refactored and added / fixed some tests
- Flattening and validation should all be done now
- I believe I am ready to continue with creating emitters

--- a/io-gen/Makefile
+++ b/io-gen/Makefile
@@ -40,7 +40,7 @@ test: $(VENV_INSTALLED_STAMP)
 	@$(PYTHON) -m pytest -k $(TESTS) $(TEST_ARGS)
 
 debug: $(VENV_INSTALLED_STAMP)
-	$(PYTHON) -m pytest -k $(TESTS) -s --pdb
+	$(PYTHON) -m pytest -k $(TESTS) -vv -s --pdb
 
 coverage: $(VENV_INSTALLED_STAMP)
 	@$(PYTHON) -m pytest $(COVERAGE_ARGS)
