Adding an `instance` and `parameters` property to the YAML.
- Non-inferred buffers need to have an instance name (optional) so I
  don't have to create one from the signal name.  This was able to be
  added quite easily - ridiculously easy and it made it very clear that
  seprating pin and signal data was what unlocked the ease of improving
  this
- Buffer generics are now supported - they will get emitted along at the
  top level of the signal and i'm going to BAN things like SLEW, DRIVE,
  and IOSTANDARD because those don't belong in the hardware. There are
  XDC constraints for that very thing. In the future, I'll add dedicated
  `slew`, `drive`, etc. to the signal properties.  For now, no more
  feature creep!

--- a/io-gen/tests/fixtures/pipeline/integration.yaml
+++ b/io-gen/tests/fixtures/pipeline/integration.yaml
@@ -139,6 +139,10 @@ signals:
   - name: mb_edge_2
     direction: out
     buffer: obufds
+    parameters:
+      DRIVE: 12
+      SLEW: FAST
+    instance: custom_instance_mb_edge_2_obufds
     width: 4
     iostandard: LVCMOS25
     multibank:
